Bunch of test fixes. Add test..tests